--- a/index.html
+++ b/index.html
@@ -1,23 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Toronto App Support</title>
   <style>
-    body { font-family:sans-serif; max-width:600px; margin:2rem auto; line-height:1.6 }
-    h1,h2 { color:#333 }
-    a { color:#0366d6; text-decoration:none }
-    a:hover { text-decoration:underline }
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      color: #333;
+      max-width: 700px;
+      margin: 2rem auto;
+      line-height: 1.6;
+      padding: 0 1rem;
+    }
+    header, footer {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+    h1 { font-size: 2rem; margin-bottom: 0.5rem; }
+    h2 { font-size: 1.5rem; margin-top: 2rem; color: #0056b3; }
+    a { color: #0056b3; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+    .contact-info p { margin: 0.3rem 0; }
+    ul { padding-left: 1.2rem; }
+    .faq-item { margin-bottom: 1rem; }
+    .section { margin-bottom: 2rem; }
+    .button {
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 0.6rem 1.2rem;
+      background-color: #0056b3;
+      color: white;
+      border-radius: 4px;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
-  <h1>Toronto App Support</h1>
-  <p>Need help? Email us at <a href="mailto:brennan_macneil@hotmail.com">brennan_macneil@hotmail.com</a>.</p>
-  <h2>FAQ</h2>
-  <ul>
-    <li><strong>How do I join a private group?</strong> Tap “Request Access” and await approval.</li>
-    <li><strong>How do I block a user?</strong> In chat, tap the user’s name → “Block”.</li>
-  </ul>
+
+  <header>
+    <h1>Toronto App Support</h1>
+    <p>Your guide to getting the most out of Toronto</p>
+    <a class="button" href="mailto:brennan_macneil@hotmail.com">Email Support</a>
+  </header>
+
+  <section class="section contact-info">
+    <h2>Contact & Availability</h2>
+    <p><strong>Email:</strong> <a href="mailto:brennan_macneil@hotmail.com">brennan_macneil@hotmail.com</a></p>
+    <p><strong>Response Time:</strong> Within 24 hours on business days</p>
+  </section>
+
+  <section class="section">
+    <h2>How Can We Help?</h2>
+    <ul>
+      <li>Account setup, password reset, and profile edits</li>
+      <li>Joining public & private groups</li>
+      <li>Creating and managing posts</li>
+      <li>Using the map and location features</li>
+      <li>One-to-one chat, blocking/unblocking users</li>
+      <li>Reporting content or users</li>
+    </ul>
+  </section>
+
+  <section class="section">
+    <h2>Frequently Asked Questions</h2>
+
+    <div class="faq-item">
+      <strong>Q: How do I join a private group?</strong>
+      <p>A: Tap “Request Access,” answer the group’s questions, then wait for an admin to approve.</p>
+    </div>
+
+    <div class="faq-item">
+      <strong>Q: Why can’t I see any groups on the map?</strong>
+      <p>A: Make sure you’ve granted location permission to Toronto in your device’s Settings. If you declined, go to Settings → Toronto → Location → “While Using the App.”</p>
+    </div>
+
+    
+
+    <div class="faq-item">
+      <strong>Q: How can I report inappropriate content or users?</strong>
+      <p>A: In the settings, tap the “Report” button and provide report details, Our moderation team reviews reports within 24 hours.</p>
+    </div>
+  </section>
+
+  <section class="section">
+    <h2>Troubleshooting & Tips</h2>
+    <ul>
+      <li><strong>App crashes on launch?</strong> Try force-closing the app and reopening. If it persists, reinstall or clear cache.</li>
+      <li><strong>Unable to upload a photo?</strong> Ensure Toronto has permission to access Photos (Settings → Privacy → Photos).</li>
+      <li><strong>Location drifting?</strong> Enable “High Accuracy” or “Precise Location” in your device’s Location Settings.</li>
+    </ul>
+  </section>
+
+  <section class="section">
+    <h2>Useful Links</h2>
+    <ul>
+      <li><a href="https://www.termsfeed.com/live/40c23964-3dbc-4dbf-99fe-d47fd9e13f1d">Privacy Policy</a></li>
+      <li><a href="https://www.termsfeed.com/live/40c23964-3dbc-4dbf-99fe-d47fd9e13f1d">Community Guidelines</a></li>
+     
+    </ul>
+  </section>
+
+  <footer>
+    <p>© 2025 Toronto App Disminal Innovations Inc. All rights reserved.</p>
+  </footer>
+
 </body>
 </html>
